// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withInternalSorting tests change rows from props 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div
          style="padding-right: 15px; position: relative;"
        >
          number
           
          <span
            class="sort-asc"
            style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 5px solid gray; position: absolute; margin-left: 5px;"
          />
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: right; white-space: nowrap; width: 140px;"
      >
        <div
          style="padding-right: 15px;"
        >
          took_office
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          1
        </div>
      </td>
      <td>
        <div>
          George Washington
        </div>
      </td>
      <td>
        <div>
          No Party
        </div>
      </td>
      <td>
        <div>
          1732
        </div>
      </td>
      <td>
        <div>
          1799
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1789-04-30
          </div>
        </div>
      </td>
      <td>
        <div>
          1797-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          2
        </div>
      </td>
      <td>
        <div>
          John Adams
        </div>
      </td>
      <td>
        <div>
          Federalist
        </div>
      </td>
      <td>
        <div>
          1735
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1797-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1801-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          3
        </div>
      </td>
      <td>
        <div>
          Thomas Jefferson
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1743
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1801-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1809-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          4
        </div>
      </td>
      <td>
        <div>
          James Madison
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1751
        </div>
      </td>
      <td>
        <div>
          1836
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1809-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1817-03-04
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`withInternalSorting tests change sort from props 1`] = `
<table>
  <thead>
    <tr>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div
          style="padding-right: 15px; position: relative;"
        >
          number
           
          <span
            class="sort-desc"
            style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; position: absolute; margin-left: 5px; border-top: 5px solid gray;"
          />
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: right; white-space: nowrap; width: 140px;"
      >
        <div
          style="padding-right: 15px;"
        >
          took_office
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          5
        </div>
      </td>
      <td>
        <div>
          James Monroe
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1758
        </div>
      </td>
      <td>
        <div>
          1831
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1817-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1825-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          4
        </div>
      </td>
      <td>
        <div>
          James Madison
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1751
        </div>
      </td>
      <td>
        <div>
          1836
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1809-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1817-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          3
        </div>
      </td>
      <td>
        <div>
          Thomas Jefferson
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1743
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1801-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1809-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          2
        </div>
      </td>
      <td>
        <div>
          John Adams
        </div>
      </td>
      <td>
        <div>
          Federalist
        </div>
      </td>
      <td>
        <div>
          1735
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1797-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1801-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          1
        </div>
      </td>
      <td>
        <div>
          George Washington
        </div>
      </td>
      <td>
        <div>
          No Party
        </div>
      </td>
      <td>
        <div>
          1732
        </div>
      </td>
      <td>
        <div>
          1799
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1789-04-30
          </div>
        </div>
      </td>
      <td>
        <div>
          1797-03-04
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`withInternalSorting tests change sort on th click 1`] = `
<th
  style="cursor: pointer; text-align: left; white-space: nowrap;"
>
  <div
    style="padding-right: 15px; position: relative;"
  >
    number
     
    <span
      class="sort-asc"
      style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 5px solid gray; position: absolute; margin-left: 5px;"
    />
  </div>
</th>
`;

exports[`withInternalSorting tests change sort on th click 2`] = `
<th
  style="cursor: pointer; text-align: left; white-space: nowrap;"
>
  <div>
    name
  </div>
</th>
`;

exports[`withInternalSorting tests change sort on th click 3`] = `
<table>
  <thead>
    <tr>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div
          style="padding-right: 15px; position: relative;"
        >
          number
           
          <span
            class="sort-asc"
            style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 5px solid gray; position: absolute; margin-left: 5px;"
          />
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          name
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: right; white-space: nowrap; width: 140px;"
      >
        <div
          style="padding-right: 15px;"
        >
          took_office
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          1
        </div>
      </td>
      <td>
        <div>
          George Washington
        </div>
      </td>
      <td>
        <div>
          No Party
        </div>
      </td>
      <td>
        <div>
          1732
        </div>
      </td>
      <td>
        <div>
          1799
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1789-04-30
          </div>
        </div>
      </td>
      <td>
        <div>
          1797-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          2
        </div>
      </td>
      <td>
        <div>
          John Adams
        </div>
      </td>
      <td>
        <div>
          Federalist
        </div>
      </td>
      <td>
        <div>
          1735
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1797-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1801-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          3
        </div>
      </td>
      <td>
        <div>
          Thomas Jefferson
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1743
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1801-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1809-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          4
        </div>
      </td>
      <td>
        <div>
          James Madison
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1751
        </div>
      </td>
      <td>
        <div>
          1836
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1809-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1817-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          5
        </div>
      </td>
      <td>
        <div>
          James Monroe
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1758
        </div>
      </td>
      <td>
        <div>
          1831
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1817-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1825-03-04
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`withInternalSorting tests change sort on th click 4`] = `
<th
  style="cursor: pointer; text-align: left; white-space: nowrap;"
>
  <div
    style="padding-right: 15px;"
  >
    number
  </div>
</th>
`;

exports[`withInternalSorting tests change sort on th click 5`] = `
<th
  style="cursor: pointer; text-align: left; white-space: nowrap;"
>
  <div
    style="padding-right: 15px; position: relative;"
  >
    name
     
    <span
      class="sort-asc"
      style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 5px solid gray; position: absolute; margin-left: 5px;"
    />
  </div>
</th>
`;

exports[`withInternalSorting tests change sort on th click 6`] = `
<table>
  <thead>
    <tr>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div
          style="padding-right: 15px;"
        >
          number
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div
          style="padding-right: 15px; position: relative;"
        >
          name
           
          <span
            class="sort-asc"
            style="width: 0px; height: 0px; border-left: 5px solid transparent; border-right: 5px solid transparent; border-bottom: 5px solid gray; position: absolute; margin-left: 5px;"
          />
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          party
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          birth_year
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          death_year
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: right; white-space: nowrap; width: 140px;"
      >
        <div
          style="padding-right: 15px;"
        >
          took_office
        </div>
      </th>
      <th
        style="cursor: pointer; text-align: left; white-space: nowrap;"
      >
        <div>
          left_office
        </div>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <div>
          1
        </div>
      </td>
      <td>
        <div>
          George Washington
        </div>
      </td>
      <td>
        <div>
          No Party
        </div>
      </td>
      <td>
        <div>
          1732
        </div>
      </td>
      <td>
        <div>
          1799
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1789-04-30
          </div>
        </div>
      </td>
      <td>
        <div>
          1797-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          4
        </div>
      </td>
      <td>
        <div>
          James Madison
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1751
        </div>
      </td>
      <td>
        <div>
          1836
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1809-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1817-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          5
        </div>
      </td>
      <td>
        <div>
          James Monroe
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1758
        </div>
      </td>
      <td>
        <div>
          1831
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1817-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1825-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          2
        </div>
      </td>
      <td>
        <div>
          John Adams
        </div>
      </td>
      <td>
        <div>
          Federalist
        </div>
      </td>
      <td>
        <div>
          1735
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1797-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1801-03-04
        </div>
      </td>
    </tr>
    <tr>
      <td>
        <div>
          3
        </div>
      </td>
      <td>
        <div>
          Thomas Jefferson
        </div>
      </td>
      <td>
        <div>
          Democratic-Republican
        </div>
      </td>
      <td>
        <div>
          1743
        </div>
      </td>
      <td>
        <div>
          1826
        </div>
      </td>
      <td
        style="width: 140px; text-align: right;"
      >
        <div
          style="margin-right: 15px;"
        >
          <div>
            1801-03-04
          </div>
        </div>
      </td>
      <td>
        <div>
          1809-03-04
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
